[gd_scene load_steps=4 format=3 uid="uid://dj255ddvuc1wu"]

[ext_resource type="Texture2D" uid="uid://5cftqiiqq4d" path="res://asset/icons/spells/BTNCancel.webp" id="2_4p6ei"]
[ext_resource type="Script" path="res://script/spells/spell_entity.gd" id="2_uea0s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bl0e3"]
bg_color = Color(0.254902, 0.341176, 0.980392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.980392, 0.901961, 0.313726, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="SpellEntity" type="TextureButton"]
custom_minimum_size = Vector2(50, 50)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_disabled = ExtResource("2_4p6ei")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_uea0s")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -192.0
offset_top = -10.0
offset_bottom = -8.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bl0e3")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="CoolDownTimer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpellTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="CoolDownTimer" to="." method="_on_timer_timeout"]
